# pvx

./: .gitignore  ALGORITHM_INVENTORY.md  CHANGELOG.md  HPS-pitch-track.py  LICENSE  README.md  main.py  pvocode.py  pvx_cli.py  pvxcommon.py  pvxconform.py  pvxdenoise.py  pvxdeverb.py  pvxformant.py  pvxfreeze.py  pvxharmonize.py  pvxlayer.py  pvxmorph.py  pvxretune.py  pvxtransient.py  pvxunison.py  pvxvoc.py  pvxwarp.py  pyproject.toml  requirements.txt  scripts_generate_docs_extras.py  scripts_generate_docs_pdf.py  scripts_generate_html_docs.py  scripts_generate_python_docs.py  scripts_generate_theory_docs.py
benchmarks/: __init__.py  baseline_small.json  metrics.py  run_bench.py
docs/: ALGORITHM_LIMITATIONS.md  API_OVERVIEW.md  ARCHITECTURE.md  BENCHMARKS.md  CITATION_QUALITY.md  CLI_FLAGS_REFERENCE.md  DEV_NOTES.md  DIAGRAMS.md  DOCS_CONTRACT.md  EXAMPLES.md  FILE_TYPES.md  GETTING_STARTED.md  HOW_TO_REVIEW.md  MATHEMATICAL_FOUNDATIONS.md  PIPELINE_COOKBOOK.md  PVC_LESSONS.md  PVX_ALGORITHM_PARAMS.md  PYTHON_FILE_HELP.md  QUALITY_GUIDE.md  RUBBERBAND_COMPARISON.md  WINDOW_REFERENCE.md  algorithm_limitations.json  citation_quality.json  cli_flags_reference.json  index.html  papers_extra.json  pipeline_cookbook.json  pvx_ALGORITHM_PARAMS.md  references.bib  technical_glossary.json  window_metrics.json
examples/: extreme_seed_10min_ambient_audible_metrics.json  extreme_seed_10min_ambient_metrics.json  pvx_tutorial.ipynb  speech_seed_10min_600x_audible_declicked_metrics.json  speech_seed_10min_600x_audible_metrics.json  speech_seed_10min_600x_smooth_compare.json  (+6 more)
(+323 files in other folders)
